--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
             
         </section>
         <section class="row">
-            <div class="jumbotron col-12" id="top_articles">
+            <div class="jumbotron col-12" >
                 <p class="display-4">Top Articles</p>
+                <div id="top_articles">
+                    <p>this is a test</p>
+                </div>
+
             </div>
         </section>
         <footer class="row">
