--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!--Font Awesome-->
+    <script src="https://kit.fontawesome.com/a86f4fac7b.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
@@ -35,17 +37,20 @@
                         <label for="endYear">End Year (Optional):</label>
                         <input type="text" class="form-control" id="endYear">
                     </div>
-                    <button type="submit" class="btn btn-primary" id="search">Search</button>
-                    <button class="btn btn-primary" id="clear_results">Clear Results</button>
+                    <button type="submit" class="btn btn-primary" id="search">
+                        <i class="fa fa-search" aria-hidden="true"></i> Search</button>
+                    <button class="btn btn-primary" id="clear_results">
+                        <i class="fa fa-trash-o" aria-hidden="true"></i> Clear Results</button>
                 </form>
             </div>
-            
+
         </section>
         <section class="row">
-            <div class="jumbotron col-12" >
-                <p class="display-4">Top Articles</p>
+            <div class="jumbotron col-12">
+                <p class="display-4">Top Articles <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                </p>
                 <div id="top_articles">
-        
+
                 </div>
 
             </div>
